added delet task btn functionallity.
added task element ids

added some jsdocks comments for dockumentation.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </section>
         <footer>
-            
+            <!-- mostly to create space for easier readability -->
         </footer>
 
         <script type="module" src="javascript/main.js"></script>
