basic local storage, needs to be worked in to all functions to work.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="newTodoList-container">
                 <input type="text" id="newTodoList-input" value="">
-                <button id="newTodoList-btn">new TodoList</button>
+                <button id="newTodoList-btn">new List</button>
             </div>
             <div class="searchBar-container">
                 <label for="SearchBar-Input"></label>
